<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintHorizontal_chainStyle="packed">
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/btnColor"
        />
    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/btnColor"
        />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:text="@string/header_name"
        android:textSize="@dimen/dimen_28dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/more" />
    <ImageView
        android:id="@+id/img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12dp"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:src="@drawable/ic_add"
        />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/img1"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:text="@string/text_name"

        android:textSize="@dimen/dimen_20dp"
        />
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        android:layout_marginTop="@dimen/dimen_36dp"
        android:text="@string/fname"
        android:background="@color/btnColor"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_28dp"
        android:layout_marginLeft="@dimen/dimen_20dp"


        />
    <ImageView
        android:id="@+id/img2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/flower"
        app:layout_constraintRight_toRightOf="parent"
        android:marginRight="@dimen/dimen_20dp"
        app:layout_constraintLeft_toRightOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/more"
        />
    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_28dp"
        android:text="@string/txt_name"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginLeft="@dimen/dimen_36dp"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/img2"

        />
    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_28dp"
        android:text="@string/tx_name"
        app:layout_constraintTop_toBottomOf="@id/img2"
       app:layout_constraintLeft_toLeftOf="@id/btn3"
        app:layout_constraintLeft_toRightOf="@id/tv3"
        android:layout_marginTop="@dimen/dimen_24dp"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv3"
        app:layout_constraintLeft_toLeftOf="@id/img1"
        android:text="@string/btn1"
        android:textSize="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        />
    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv4"
        app:layout_constraintLeft_toRightOf="@id/btn2"
        android:text="@string/btn2"
        android:textSize="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:src="@drawable/ph2"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        android:layout_marginTop="@dimen/dimen_36dp"
       android:layout_marginLeft="@dimen/dimen_4dp"
        />
    <ImageView
        android:id="@+id/img4"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:src="@drawable/ph2"
        app:layout_constraintLeft_toRightOf="@id/img3"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        android:layout_marginTop="@dimen/dimen_36dp"
        />
    <ImageView
        android:id="@+id/img5"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:src="@drawable/ph2"
        app:layout_constraintLeft_toRightOf="@id/img4"
        app:layout_constraintTop_toBottomOf="@id/btn3"

        android:layout_marginTop="@dimen/dimen_36dp"/>
    <ImageView
        android:id="@+id/img6"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:src="@drawable/ph2"
        app:layout_constraintLeft_toRightOf="@id/img5"
        app:layout_constraintTop_toBottomOf="@id/btn3"

        android:layout_marginTop="@dimen/dimen_36dp"/>
    <ImageView
        android:id="@+id/img7"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:src="@drawable/ph2"
        app:layout_constraintLeft_toRightOf="@id/img6"
        app:layout_constraintTop_toBottomOf="@id/btn3"
       android:layout_marginTop="@dimen/dimen_36dp"
        android:layout_marginRight="@dimen/dimen_20dp"

        />
    <ImageView
        android:id="@+id/img8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_airplanemode"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/img7"

        android:layout_marginLeft="@dimen/dimen_36dp"

        />

    <ImageView
        android:id="@+id/img9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_bluetooth"
        app:layout_constraintTop_toBottomOf="@+id/img4"
        app:layout_constraintLeft_toRightOf="@id/img8"
        android:paddingLeft="@dimen/dimen_36dp"/>
    <ImageView
        android:id="@+id/img10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_wifi"
        app:layout_constraintTop_toBottomOf="@+id/img7"
        app:layout_constraintLeft_toRightOf="@id/img9"
        android:paddingLeft="@dimen/dimen_36dp"/>
        />
    <ImageView
        android:id="@+id/img11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_file_download"
        app:layout_constraintTop_toBottomOf="@+id/img7"

        app:layout_constraintLeft_toRightOf="@+id/img10"
        android:paddingLeft="@dimen/dimen_36dp"/>
    <ImageView
        android:id="@+id/img12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_brightness"
        app:layout_constraintTop_toBottomOf="@+id/img7"
        app:layout_constraintLeft_toRightOf="@id/img11"
        android:paddingLeft="@dimen/dimen_36dp"/>
    <EditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img11"
        />
    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_32dp"
        android:text="@string/t_name"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/et"
        android:layout_marginTop="@dimen/dimen_36dp"/>
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/dimen_20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv5"
        app:layout_constraintLeft_toLeftOf="@id/tv1"
        android:layout_marginLeft="@dimen/dimen_36dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>